--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="{% static 'blog/styles.css' %}">
 </head>
 <body>
-    <nav>
-        <a href="{% url 'post_list' %}">Home</a>
-        <a href="{% url 'add_post' %}">Create Post</a>
+    <nav class="navbar">
+        <div class="container">
+            <a href="/" class="logo">My Blog</a>
+            <ul class="nav-links">
+                <li><a href="/">Home</a></li>
+                <li><a href="/post/create/">Create Post</a></li>
+            </ul>
+        </div>
     </nav>
-    <div class="container">
-        {% block content %}{% endblock %}
+    <div class="content">
+        {% block content %}
+        {% endblock %}
     </div>
 </body>
 </html>
