--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Add New Post</h1>
-<form method="post">
-    {% csrf_token %}
-    <label for="title">Title:</label>
-    <input type="text" name="title" id="title">
-    <br>
-    <label for="content">Content:</label>
-    <textarea name="content" id="content"></textarea>
-    <br>
-    <button type="submit">Save Post</button>
-    <a href="/">Cancel</a>
-</form>
+<div class="form-container">
+    <h1>Add New Post</h1>
+    <form method="post">
+        {% csrf_token %}
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title">
+        <br>
+        <label for="content">Content:</label>
+        <textarea name="content" id="content"></textarea>
+        <br>
+        <button type="submit" class="btn btn-save">Save Post</button>
+        <a href="/" class="btn btn-cancel">Cancel</a>
+    </form>
+</div>
 {% endblock %}
