--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Edit Post</h1>
-<form method="post">
-    {% csrf_token %}
-    <label for="title">Title:</label>
-    <input type="text" name="title" id="title" value="{{ post.title }}">
-    <br>
-    <label for="content">Content:</label>
-    <textarea name="content" id="content">{{ post.content }}</textarea>
-    <br>
-    <button type="submit">Save Changes</button>
-    <a href="/">Cancel</a>
-</form>
+<div class="form-container">
+    <h1>Edit Post</h1>
+    <form method="post">
+        {% csrf_token %}
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title" value="{{ post.title }}">
+        <label for="content">Content:</label>
+        <textarea name="content" id="content">{{ post.content }}</textarea>
+        <button type="submit" class="btn btn-save">Save Changes</button>
+        <a href="/" class="btn btn-cancel">Cancel</a>
+    </form>
+</div>
 {% endblock %}
